# COM-BOM

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py  train.py
combom/: __init__.py  acquisition_functions.py  dimscaled_priors.py  gp_modeling.py  tanimoto_kernel.py  trust_region.py
configs/: mmlupro.yaml
tasks/: __init__.py  base.py  mmlupro.py
utils/: __init__.py  evaluation.py
